; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-s3c64xx/extr_dma.c_dbg_showchan.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-s3c64xx/extr_dma.c_dbg_showchan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s3c2410_dma_chan = type { i64, i32 }

@.str = private unnamed_addr constant [45 x i8] c"DMA%d: %08x->%08x L %08x C %08x,%08x S %08x\0A\00", align 1
@PL080_CH_SRC_ADDR = common dso_local global i64 0, align 8
@PL080_CH_DST_ADDR = common dso_local global i64 0, align 8
@PL080_CH_LLI = common dso_local global i64 0, align 8
@PL080_CH_CONTROL = common dso_local global i64 0, align 8
@PL080S_CH_CONTROL2 = common dso_local global i64 0, align 8
@PL080S_CH_CONFIG = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.s3c2410_dma_chan*)* @dbg_showchan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dbg_showchan(%struct.s3c2410_dma_chan* %0) #0 {
  %2 = alloca %struct.s3c2410_dma_chan*, align 8
  store %struct.s3c2410_dma_chan* %0, %struct.s3c2410_dma_chan** %2, align 8
  %3 = load %struct.s3c2410_dma_chan*, %struct.s3c2410_dma_chan** %2, align 8
  %4 = getelementptr inbounds %struct.s3c2410_dma_chan, %struct.s3c2410_dma_chan* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 8
  %6 = load %struct.s3c2410_dma_chan*, %struct.s3c2410_dma_chan** %2, align 8
  %7 = getelementptr inbounds %struct.s3c2410_dma_chan, %struct.s3c2410_dma_chan* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @PL080_CH_SRC_ADDR, align 8
  %10 = add nsw i64 %8, %9
  %11 = call i32 @readl(i64 %10)
  %12 = load %struct.s3c2410_dma_chan*, %struct.s3c2410_dma_chan** %2, align 8
  %13 = getelementptr inbounds %struct.s3c2410_dma_chan, %struct.s3c2410_dma_chan* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @PL080_CH_DST_ADDR, align 8
  %16 = add nsw i64 %14, %15
  %17 = call i32 @readl(i64 %16)
  %18 = load %struct.s3c2410_dma_chan*, %struct.s3c2410_dma_chan** %2, align 8
  %19 = getelementptr inbounds %struct.s3c2410_dma_chan, %struct.s3c2410_dma_chan* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @PL080_CH_LLI, align 8
  %22 = add nsw i64 %20, %21
  %23 = call i32 @readl(i64 %22)
  %24 = load %struct.s3c2410_dma_chan*, %struct.s3c2410_dma_chan** %2, align 8
  %25 = getelementptr inbounds %struct.s3c2410_dma_chan, %struct.s3c2410_dma_chan* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @PL080_CH_CONTROL, align 8
  %28 = add nsw i64 %26, %27
  %29 = call i32 @readl(i64 %28)
  %30 = load %struct.s3c2410_dma_chan*, %struct.s3c2410_dma_chan** %2, align 8
  %31 = getelementptr inbounds %struct.s3c2410_dma_chan, %struct.s3c2410_dma_chan* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = load i64, i64* @PL080S_CH_CONTROL2, align 8
  %34 = add nsw i64 %32, %33
  %35 = call i32 @readl(i64 %34)
  %36 = load %struct.s3c2410_dma_chan*, %struct.s3c2410_dma_chan** %2, align 8
  %37 = getelementptr inbounds %struct.s3c2410_dma_chan, %struct.s3c2410_dma_chan* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = load i64, i64* @PL080S_CH_CONFIG, align 8
  %40 = add nsw i64 %38, %39
  %41 = call i32 @readl(i64 %40)
  %42 = call i32 @pr_debug(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0), i32 %5, i32 %11, i32 %17, i32 %23, i32 %29, i32 %35, i32 %41)
  ret void
}

declare dso_local i32 @pr_debug(i8*, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @readl(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
